Added steps I tool to implement final prediction model

--- a/titanic_survival_exploration/report.html
+++ b/titanic_survival_exploration/report.html
@@ -1683,6 +1683,14 @@ Make sure to keep track of the various features and conditions you tried before 
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer</strong>: <em>Predictions have an accuracy of 80.02%.</em></p>
+<ul>
+<li>I did tried to maximeze accuracy by combining passenger["Sex"]. And results where always under 80%. So I took a step back and started trying features on the Sex == female condition. From there it was easy to suposse that Pclass == 1 will have the best results.. and finally added Age &lt; 14 or 15 they produce the same result.  </li>
+<li>Sex i found as the major split condition</li>
+<li><p>Followed by Pclass and Age. And that how I got the final combination.</p>
+</li>
+<li><p>I will like to keep trying for a prediction on 80% that involves Male/Female condition</p>
+</li>
+</ul>
 
 </div>
 </div>
